--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,7 +3,7 @@ name: Laravel
 on:
   push:
   pull_request:
-  
+
 jobs:
   laravel-tests:
 
@@ -22,26 +22,31 @@ jobs:
     - name: Install Dependencies
       run: composer install --no-progress --prefer-dist --optimize-autoloader
     - uses: actions/checkout@v3
-    
+
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      
+
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-      
+
+    - name: Install NPM
+    - run: nvm uses
+    - run: npm install
+    - run: npm run build
+
     - name: Generate key
       run: php artisan key:generate
-      
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-      
+
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
 
-    - name: Run PHPStan
-      run: ./vendor/bin/phpstan analyse
+    - name: Run Pint
+      run: ./vendor/bin/pint
 
     - name: Run Pest Tests
       env:
