--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,9 +19,6 @@ jobs:
         extensions: mbstring, dom, curl, xml
         tools: composer:v2, phpstan
 
-    - name: Install Dependencies
-      run: composer install --no-progress --prefer-dist --optimize-autoloader
-    - uses: actions/checkout@v3
 
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
@@ -29,16 +26,22 @@ jobs:
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-    - name: Install NPM
-    - run: nvm uses
-    - run: npm install
-    - run: npm run build
-
     - name: Generate key
       run: php artisan key:generate
 
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20' # Ensure this version matches your project requirements
+
+    - name: Install NPM Dependencies
+      run: npm install
+
+    - name: Build Assets
+      run: npm run build
 
     - name: Create Database
       run: |
